<package>
  <name>apriltag</name>
  <version>0.1.0</version>
  <description>The apriltag package</description>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
