<?xml version="1.0"?>
<package format="2">
  <name>apriltag_gen</name>
  <version>0.0.1</version>
  <description>The apriltag_gen package will generate apriltags</description>

  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
