<package format="2">
  <name>apriltag_mit</name>
  <version>0.3.0</version>
  <description>A C++ Apriltag library</description>
  <author>Michael Kaess</author>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslib</depend>
  <test_depend>gtest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
