<package format="2">
  <name>apriltag_mit</name>
  <version>0.3.0</version>
  <description>A C++ Apriltag library</description>
  <author>Michael Kaess</author>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
