<package format="2">
  <name>apriltag_msgs</name>
  <version>0.0.1</version>
  <description>Apriltag messages</description>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
