<package format="2">
  <name>apriltag_ros</name>
  <version>1.0.0</version>
  <description>The apriltag ros package</description>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <author>Chao Qu</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>apriltag_mit</depend>
  <depend>apriltag_umich</depend>
  <depend>apriltag_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
