<package format="2">
  <name>apriltag_rviz</name>
  <version>0.0.1</version>
  <description>Display apriltags in Rviz</description>
  <author>Chao Qu</author>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rviz</depend>

  <export>
  </export>
</package>
