<package format="2">
  <name>apriltag_umich</name>
  <version>2.0.0</version>
  <description>A C Apriltag library</description>
  <author>Edwin Olson</author>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslib</depend>
</package>
