<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>ethz_apriltag2</name>
  <description>
  ethz_apriltag2

	ros lib of http://people.csail.mit.edu/kaess/apriltags/
</description>
  <version>0.0.1</version>
  <maintainer email="paulfurgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
