<package>
  <name>sv_apriltag</name>
  <version>0.1.0</version>
  <description>The Apriltag package</description>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
